--- a/.gitignore
+++ b/.gitignore
@@ -6,5 +6,6 @@ comments/
 /TRAINING/PLANT-CONCRETE/
 /TRAINING/PLANT-GRASS/
 /TRAINING/PLANT-SOIL/
-/TRAINED_MODELS/*.zip
-/TRAINED_MODELS/*.h5
+/TRAINED_MODELS/**/*.zip
+/TRAINED_MODELS/**/*.h5
+
