--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,3 @@
 TRAINED_MODELS/MODEL-1/model.tflite filter=lfs diff=lfs merge=lfs -text
+TRAINED_MODELS/MODEL-1/model.h5 filter=lfs diff=lfs merge=lfs -text
+TRAINED_MODELS/MODEL-1/my_model.h5 filter=lfs diff=lfs merge=lfs -text
